--- a/contact.html
+++ b/contact.html
@@ -356,7 +356,7 @@
                     <h4 class="text-dark">Address</h4>
                      <!-- <h4 class="footer-heading" style="color: #e45c0c;" >Thinkwalls Global Private Limited </h4> -->
                     <h6>
-                   Hyderabad
+                      133, Siri Arcade, 401, Old Mumbai Hwy, Lumbini Avenue, Gachibowli, Hyderabad, Telangana 500032
                     </h6>
                   </div>
                 </div>
@@ -466,7 +466,8 @@
             <h4 class="footer-heading" style="color: #D19A23;">Address</h4>
             <ul>
               <li class="address">
-                <i class="bi bi-geo-alt me-2" style="color: #D19A23;"></i><a class="company-name-heading" style="color: white;" target="_blank" href="https://maps.app.goo.gl/URFsAe9rWxvN62iQ7">133, Siri Arcade, 401, Old Mumbai Hwy, Lumbini Avenue, Gachibowli, Hyderabad, Telangana 500032</a>
+                <i class="bi bi-geo-alt me-2" style="color: #D19A23;"></i>
+                <a class="company-name-heading" style="color: white;" target="_blank" href="https://maps.app.goo.gl/URFsAe9rWxvN62iQ7">133, Siri Arcade, 401, Old Mumbai Hwy, Lumbini Avenue, Gachibowli, Hyderabad, Telangana 500032</a>
               </li>
               <li>
                 <a href="mailto:projects@sr.com" target="_blank"
