--- a/index.html
+++ b/index.html
@@ -1490,6 +1490,57 @@ color: white;
   </div>
 </section>
 
+
+<section class="milestone-section p-5 mt-space mb-space" style="background-color:black; border-radius: 10px;">
+  <div class="row">
+
+    <div class="col-xl-6 col-lg-5 col-md-12 col-sm-12">
+      <div class="side-img-part milestone-img-part">
+        <img src="images/MODULAR KITCHENS (1)/1.png" class="milestone-main-img animated-image" alt="Modular Kitchen">
+      </div>
+    </div>
+
+    <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12 p-5">
+      <img src="assets/images/h71.webp" class="milestone-bg" alt="Background Image">
+      
+      <div class="side-txt-part milestone-txt-part">
+        <div class="main-heading">
+          <h2 class="animated-heading">
+            <i class="fas fa-hashtag" style="color: #D19A23;"></i> <!-- Hash color icon -->
+            Modular Kitchen's
+          </h2>
+          <p class="animated-text">
+            A modular kitchen offers customizable layouts with pre-manufactured cabinets and efficient storage solutions, designed for optimal space utilization.
+            It combines style and functionality, making it easy to install and maintain.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xl-6 col-lg-7 col-md-12 col-sm-12 p-5">
+      <img src="assets/images/h71.webp" class="milestone-bg" alt="Background Image">
+      
+      <div class="side-txt-part milestone-txt-part">
+        <div class="main-heading">
+          <h2 class="animated-heading">
+            <i class="fas fa-hashtag" style="color: #D19A23;"></i> <!-- Hash color icon -->
+            Semi Modular Kitchen's
+          </h2>
+          <p class="animated-text">
+            A semi-modular kitchen is a hybrid between traditional and modular kitchens, offering a balance of flexibility and customization. In this design, certain elements of the kitchen, such as the countertop and sink, are often built on-site, while the rest of the components, like cabinets and drawers, are pre-fabricated and assembled.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xl-6 col-lg-5 col-md-12 col-sm-12">
+      <div class="side-img-part milestone-img-part">
+        <img src="images/MODULAR KITCHENS (1)/semi-modulars.png" class="milestone-main-img animated-image" alt="Semi Modular Kitchen">
+      </div>
+    </div>
+  </div>
+</section>
+
 <style>
   .milestone-section {
     perspective: 1000px; /* Creates a 3D perspective effect */
