--- a/about.html
+++ b/about.html
@@ -17,6 +17,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <!-- AOS CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap"
       rel="stylesheet"
@@ -198,14 +201,14 @@
       </section>
 
 
-    <!--about-->
+<!--about-->
 
-<section class="about-section about-img-box section-size mt-space mb-space" style="background-color: #0a0a0a;">
+<section class="about-section about-img-box section-size mt-space mb-space"  style="background-color: #0a0a0a;">
   <div class="row justify-content-center">
     <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
       <div class="about-img-part side-img-part">
         <div class="">
-          <img src="images/kitchen-furniture-illustration.png" class="about-img-box-main-img" alt="Kitchen Image">
+          <img src="images/kitchen-furniture-illustration.png" class="about-img-box-main-img" data-aos="fade-right" data-aos-duration="1000" alt="Kitchen Image">
           <div class="about-section-card"></div>
         </div>
       </div>
@@ -213,10 +216,10 @@
 
     <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12">
       <div class="about-txt-part side-txt-part">
-        <div class="main-heading">
+        <div class="main-heading" data-aos="fade-left" data-aos-duration="1000">
           <h6 class="smallhead"><i class="fas fa-info-circle"></i> About Us</h6>
           <h2 class="text-white">Discover the Art of Interior Transformation</h2>
-          <p>
+          <p >
             SR Interiors is a leading interior design firm committed to transforming spaces into stunning and functional environments.
             With a focus on innovative design solutions and meticulous attention to detail, we specialize in creating personalized interiors 
             that reflect our clients' unique styles and preferences.
@@ -226,20 +229,20 @@
         <!-- Vision and Mission Section with Icons -->
         <div class="row mt-4">
           <div class="col-md-6 vision-mission">
-            <div class="vision-heading">
+            <div class="vision-heading" data-aos="fade-right" data-aos-duration="1000">
               <i class="fas fa-eye"></i>
               <h4 class="text-white">Our Vision</h4>
             </div>
-            <p class="vision-mission-text">
+            <p class="vision-mission-text" data-aos="fade-left" data-aos-duration="1000">
               To be the leading interior design firm that inspires and transforms living spaces, providing innovative solutions that enhance the quality of life.
             </p>
           </div>
           <div class="col-md-6 vision-mission">
-            <div class="mission-heading">
+            <div class="mission-heading" data-aos="fade-right" data-aos-duration="1000">
               <i class="fas fa-bullseye"></i>
               <h4 class="text-white">Our Mission</h4>
             </div>
-            <p class="vision-mission-text">
+            <p class="vision-mission-text" data-aos="fade-left" data-aos-duration="1000">
               Our mission is to create exceptional interiors by combining our design expertise with our clients' visions, ensuring quality, functionality, and satisfaction.
             </p>
           </div>
@@ -298,14 +301,14 @@ p {
 
 .vision-mission-text {
   line-height: 1.5;
-  color: #666;
+  color: rgb(209, 201, 201);
   font-size: 1rem; /* Font size for mission and vision text */
   margin-bottom: 20px; /* Space below mission and vision text */
   transition: color 0.3s; /* Transition effect for text color */
 }
 
 .vision-mission:hover .vision-mission-text {
-  color: #333; /* Change text color on hover */
+  color: #8c8989; /* Change text color on hover */
 }
 
 .about-bottom-area {
@@ -384,14 +387,13 @@ p {
 
 <!--about-->
 
-
       
 <!-- Gallery -->
 <div class="gallery-container container-gal mt-5">
   <div class="gallery-header">
     <h2 class="gallery-title pb-3">Our Gallery</h2>
   </div>
-  <div class="gallery-image-container">
+  <div class="gallery-image-container" data-aos="fade-right" data-aos-duration="1000">
     <div class="gallery-image-row" id="row1">
       <img src="images/livingrooms/2.png" alt="Image 1">
       <img src="images/pooja units/3.png" alt="Image 2">
@@ -808,6 +810,19 @@ p {
 
 </main>
  
+<!-- AOS JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+  AOS.init(); // Initialize AOS animations
+</script>
+<script>
+  AOS.init({
+    offset: 200, // Trigger animations after scrolling 200px
+    duration: 1000, // Animation duration in milliseconds
+    easing: 'ease-in-out', // Animation easing function
+    once: true, // Animation happens only once when scrolling down
+  });
+</script>
 
 <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
