--- a/residential-services.html
+++ b/residential-services.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
@@ -279,7 +280,7 @@
             <button class="prevButton nav-button">◀</button>
             <div class="image-container">
                 <div class="images-wrapper">
-                    <img src="images/residence/kitchensss/3.png" alt="Image 1" class="gallery-image">
+                    <img src="images/residence/kitchensss/3.png" alt="Image 1" class="gallery-image" data-aos="zoom-in" data-aos-duration="1500" data-aos-delay="200">
                     <img src="images/residence/kitchensss/4.png" alt="Image 2" class="gallery-image">
                     <img src="images/residence/kitchensss/9.png" alt="Image 3" class="gallery-image">
                     <img src="images/residence/kitchensss/6.png" alt="Image 4" class="gallery-image">
@@ -794,7 +795,20 @@
         });
       });
     </script>
+    <script>
+      AOS.init({
+        offset: 200, // Trigger animations after scrolling 200px
+        duration: 1000, // Animation duration in milliseconds
+        easing: 'ease-in-out', // Animation easing function
+        once: true, // Animation happens only once when scrolling down
+      });
+    </script>
 
+<!-- AOS JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+  AOS.init(); // Initialize AOS animations
+</script>
 
 <script>
   
