--- a/index.html
+++ b/index.html
@@ -493,8 +493,8 @@ p {
           <div class="pricing-text  p-1 ">
             <div class="owl-carousel pricing-carousel">
               <div class="">
-                <a href="images/pooja units/1.png" data-lightbox="mygallery" data-aos="fade-right" data-aos-duration="1000" data-title="Image 1">
-               <img class="imgsss fade-in" src="images/pooja units/1.png" data-aos="fade-right" data-aos-duration="1000" alt=""></a>
+                <a href="images/pooja units/1.png" data-lightbox="mygallery"  data-title="Image 1">
+               <img class="imgsss fade-in" src="images/pooja units/1.png"  alt=""></a>
                <p class="text-center">Elegant Designs for Sacred Spaces
                </p>
               </div>
@@ -539,6 +539,8 @@ p {
   </div>
 </div>
 <!--pooja-->
+
+
 
 <!--Living Room-->
 <div class="services-btn">
