--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
     <div class="top-bar">
       <div class="contact-info">
         <a href="mailto:yourmail@example.com">
-          <i class="fas fa-envelope text-dark"></i> sr@interiors.com
+          <i class="fas fa-envelope text-dark"></i> srinteriors33@gmail.com
         </a> |
         <a href="tel:+9963043888">
           <i class="fas fa-phone text-dark"></i> +91 9963043888
@@ -359,7 +359,7 @@
         </li>
         <li>
           <a href="mailto:projects@sr.com" target="_blank"
-            ><i class="bi bi-envelope me-2" style="color: #D19A23;"></i>sr@interiors.com</a
+            ><i class="bi bi-envelope me-2" style="color: #D19A23;"></i>srinteriors33@gmail.com</a
           >
         </li>
         <li>
