--- a/index.html
+++ b/index.html
@@ -2242,6 +2242,149 @@ color: white;
       <img src="images/bedrooms/15.png" alt="Image 14">
       <img src="images/livingrooms/5.png" alt="Image 15">
     </div>
+
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/2.jpg" alt="Image 13">
+      <img src="images/neimgallsr/5.jpg" alt="Image 14">
+      <img src="images/neimgallsr/6.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/7.jpg" alt="Image 13">
+      <img src="images/neimgallsr/8.jpg" alt="Image 14">
+      <img src="images/neimgallsr/9.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/8.jpg" alt="Image 13">
+      <img src="images/neimgallsr/9.jpg" alt="Image 14">
+      <img src="images/neimgallsr/10.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/11.jpg" alt="Image 13">
+      <img src="images/neimgallsr/12.jpg" alt="Image 14">
+      <img src="images/neimgallsr/13.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/14.jpg" alt="Image 13">
+      <img src="images/neimgallsr/15.jpg" alt="Image 14">
+      <img src="images/neimgallsr/16.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/17.jpg" alt="Image 13">
+      <img src="images/neimgallsr/18.jpg" alt="Image 14">
+      <img src="images/neimgallsr/19.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/20.jpg" alt="Image 13">
+      <img src="images/neimgallsr/21.jpg" alt="Image 14">
+      <img src="images/neimgallsr/22.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/23.jpg" alt="Image 13">
+      <img src="images/neimgallsr/24.jpg" alt="Image 14">
+      <img src="images/neimgallsr/25.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/26.jpg" alt="Image 13">
+      <img src="images/neimgallsr/27.jpg" alt="Image 14">
+      <img src="images/neimgallsr/28.jpg" alt="Image 15">
+    </div>
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/29.jpg" alt="Image 13">
+      <img src="images/neimgallsr/30.jpg" alt="Image 14">
+      <img src="images/neimgallsr/31.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/32.jpg" alt="Image 13">
+      <img src="images/neimgallsr/33.jpg" alt="Image 14">
+      <img src="images/neimgallsr/34.jpg" alt="Image 15">
+    </div>
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/35.jpg" alt="Image 13">
+      <img src="images/neimgallsr/36.jpg" alt="Image 14">
+      <img src="images/neimgallsr/37.jpg" alt="Image 15">
+    </div>
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/38.jpg" alt="Image 13">
+      <img src="images/neimgallsr/39.jpg" alt="Image 14">
+      <img src="images/neimgallsr/40.jpg" alt="Image 15">
+    </div>
+
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/41.jpg" alt="Image 13">
+      <img src="images/neimgallsr/42.jpg" alt="Image 14">
+      <img src="images/neimgallsr/43.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/44.jpg" alt="Image 13">
+      <img src="images/neimgallsr/45.jpg" alt="Image 14">
+      <img src="images/neimgallsr/46.jpg" alt="Image 15">
+    </div>
+
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/47.jpg" alt="Image 13">
+      <img src="images/neimgallsr/48.jpg" alt="Image 14">
+      <img src="images/neimgallsr/49.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/50.jpg" alt="Image 13">
+      <img src="images/neimgallsr/51.jpg" alt="Image 14">
+      <img src="images/neimgallsr/52.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/53.jpg" alt="Image 13">
+      <img src="images/neimgallsr/54.jpg" alt="Image 14">
+      <img src="images/neimgallsr/55.jpg" alt="Image 15">
+    </div>
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/56.jpg" alt="Image 13">
+      <img src="images/neimgallsr/57.jpg" alt="Image 14">
+      <img src="images/neimgallsr/58.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/59.jpg" alt="Image 13">
+      <img src="images/neimgallsr/60.jpg" alt="Image 14">
+      <img src="images/neimgallsr/61.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/62.jpg" alt="Image 13">
+      <img src="images/neimgallsr/63.jpg" alt="Image 14">
+      <img src="images/neimgallsr/64.jpg" alt="Image 15">
+    </div>
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/65.jpg" alt="Image 13">
+      <img src="images/neimgallsr/66.jpg" alt="Image 14">
+      <img src="images/neimgallsr/67.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/68.jpg" alt="Image 13">
+      <img src="images/neimgallsr/69.jpg" alt="Image 14">
+      <img src="images/neimgallsr/70.jpg" alt="Image 15">
+    </div>
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/71.jpg" alt="Image 13">
+      <img src="images/neimgallsr/72.jpg" alt="Image 14">
+      <img src="images/neimgallsr/73.jpg" alt="Image 15">
+    </div>
+
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/74.jpg" alt="Image 13">
+      <img src="images/neimgallsr/75.jpg" alt="Image 14">
+      <img src="images/neimgallsr/76.jpg" alt="Image 15">
+    </div>
+    <div class="gallery-image-row" id="row5">
+      <img src="images/neimgallsr/77.jpg" alt="Image 13">
+      <img src="images/neimgallsr/78.jpg" alt="Image 14">
+      <img src="images/neimgallsr/79.jpg" alt="Image 15">
+    </div>
   </div>
 
   <!-- Pagination (Bubbles and Arrows) -->
@@ -2252,6 +2395,14 @@ color: white;
     <span class="gallery-bubble" data-set="3">3</span>
     <span class="gallery-bubble" data-set="4">4</span>
     <span class="gallery-bubble" data-set="5">5</span>
+    <span class="gallery-bubble" data-set="6">6</span>
+    <span class="gallery-bubble" data-set="7">7</span>
+
+    <span class="gallery-bubble" data-set="8">8</span>
+
+    <span class="gallery-bubble" data-set="9">9</span>
+    <span class="gallery-bubble" data-set="10">10</span>
+    <span class="gallery-bubble" data-set="11">11</span>
     <span class="gallery-arrow right">&#8250;</span>
   </div>
 </div>
