--- a/index.html
+++ b/index.html
@@ -2462,6 +2462,10 @@ color: white;
     <span class="gallery-bubble" data-set="9">9</span>
     <span class="gallery-bubble" data-set="10">10</span>
     <span class="gallery-bubble" data-set="11">11</span>
+    <span class="gallery-bubble" data-set="12">12</span>
+    <span class="gallery-bubble" data-set="13">13</span>
+    <span class="gallery-bubble" data-set="14">14</span>
+    <span class="gallery-bubble" data-set="15">15</span>
     <span class="gallery-arrow right">&#8250;</span>
   </div>
 </div>
