--- a/404.html
+++ b/404.html
@@ -155,6 +155,11 @@
                         <a class="nav-link" href="packages.html">Packages</a>
                     </li>
 
+                     <!-- gallery Link -->
+            <li class="nav-item">
+                <a class="nav-link" href="gallery.html">Gallery</a>
+              </li>
+
                     <!-- Contact Link -->
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
