--- a/packages.html
+++ b/packages.html
@@ -234,6 +234,12 @@
           <a class="nav-link active" href="packages.html">Packages</a>
         </li>
 
+
+         <!-- gallery Link -->
+         <li class="nav-item">
+          <a class="nav-link" href="gallery.html">Gallery</a>
+        </li>
+
         <!-- Contact Link -->
         <li class="nav-item">
           <a class="nav-link " href="contact.html">Contact</a>
