--- a/renovation-services.html
+++ b/renovation-services.html
@@ -171,6 +171,11 @@
             <li class="nav-item">
               <a class="nav-link" href="packages.html">Packages</a>
             </li>
+
+             <!-- gallery Link -->
+             <li class="nav-item">
+              <a class="nav-link" href="gallery.html">Gallery</a>
+            </li>
     
             <!-- Contact Link -->
             <li class="nav-item">
