--- a/thank-you.html
+++ b/thank-you.html
@@ -244,6 +244,11 @@ border-radius: 0;
                 >
               </li>
               <li>
+                <a href="gallery.html"
+                  ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Gallery</a
+                >
+              </li>
+              <li>
                 <a href="contact.html"
                   ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Contact</a
                 >
