--- a/about.html
+++ b/about.html
@@ -721,6 +721,12 @@ p {
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Projects</a
           >
         </li>
+
+        <li>
+          <a href="gallery.html"
+            ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Gallery</a
+          >
+        </li>
         <li>
           <a href="contact.html"
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Contact</a
@@ -757,6 +763,8 @@ p {
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Packages</a
           >
         </li>
+
+       
         
       </ul>
 
