--- a/commercial-services.html
+++ b/commercial-services.html
@@ -421,6 +421,12 @@
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Projects</a
           >
         </li>
+
+        <li>
+          <a href="gallery.html"
+            ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Gallery</a
+          >
+        </li>
         <li>
           <a href="contact.html"
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Contact</a
@@ -457,6 +463,8 @@
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Packages</a
           >
         </li>
+
+       
         
       </ul>
 
