--- a/index.html
+++ b/index.html
@@ -2765,6 +2765,12 @@ color: white;
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Projects</a
           >
         </li>
+
+        <li>
+          <a href="gallery.html"
+            ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Gallery</a
+          >
+        </li>
         <li>
           <a href="contact.html"
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Contact</a
