--- a/renovation-services.html
+++ b/renovation-services.html
@@ -523,6 +523,11 @@
           >
         </li>
         <li>
+          <a href="gallery.html"
+            ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Gallery</a
+          >
+        </li>
+        <li>
           <a href="contact.html"
             ><i class="bi bi-arrow-right me-2" style="color: #D19A23;"></i>Contact</a
           >
