--- a/index.html
+++ b/index.html
@@ -67,77 +67,80 @@
 
 
 
-<div class="top-bar">
-  <div class="contact-info">
-    <a href="mailto:yourmail@example.com">
-      <i class="fas fa-envelope text-dark"></i> srinteriors33@gmail.com
-    </a> |
-    <a href="tel:+9963043888">
-      <i class="fas fa-phone text-dark"></i> +91 9963043888
-    </a>
-  </div>
-  <div class="social-icons">
-    <a href="https://www.facebook.com/profile.php?id=61566746447096" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://www.instagram.com/sr_interiors3/" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.youtube.com/@SRInteriors-w7z" target="_blank"><i class="fab fa-youtube"></i></a>
-    <a href="https://x.com/SR_Interiors3" target="_blank"><i class="fab fa-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-  </div>
-</div>
-
-<style>
-  .top-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f8f8f8;
-  padding: 10px 20px;
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-}
-
-.contact-info a {
-  margin-right: 10px;
-  text-decoration: none;
-  color: #D19A23;
-  padding-inline: 1rem;
-}
-
-
-
-.contact-info i {
-  margin-right: 5px; /* Adds space between the icon and text */
-}
-
-.social-icons a {
-  margin-left: 10px;
-  text-decoration: none;
-  color: #D19A23;
-  padding-inline: 0.5rem;
-
-}
-
-.social-icons a:hover {
-  color: black;
-}
-
-/* Style for Font Awesome icons */
-.social-icons i {
-  font-size: 13px;
-}
-
-.contact-info i {
-  font-size: 16px;
-}
-
-/* Mobile lo hide cheyyadam (max-width: 768px) */
-@media (max-width: 768px) {
-  .top-bar {
-    display: none;
-  }
-}
-
-</style>
+      <div class="top-bar">
+        <div class="contact-info">
+          <a href="mailto:yourmail@example.com">
+            <i class="fas fa-envelope text-white"></i> srinteriors33@gmail.com
+          </a> |
+          <a href="tel:+9963043888">
+            <i class="fas fa-phone text-white"></i> +91 9963043888
+          </a>
+        </div>
+        <div class="social-icons">
+          <a href="https://www.facebook.com/profile.php?id=61566746447096" target="_blank"><i
+              class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/sr_interiors3/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.youtube.com/@SRInteriors-w7z" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="https://x.com/SR_Interiors3" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/sr-interiors-ba3a61332/" target="_blank"><i
+              class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+  
+      <style>
+        .top-bar {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          background-color: #0a0a0a !important;
+          padding: 10px 20px;
+          font-family: Arial, sans-serif;
+          font-size: 14px;
+        }
+  
+        .contact-info a {
+          margin-right: 10px;
+          text-decoration: none;
+          color: #D19A23;
+          padding-inline: 1rem;
+        }
+  
+  
+  
+        .contact-info i {
+          margin-right: 5px;
+          /* Adds space between the icon and text */
+        }
+  
+        .social-icons a {
+          margin-left: 10px;
+          text-decoration: none;
+          color: #D19A23;
+          padding-inline: 0.5rem;
+  
+        }
+  
+        .social-icons a:hover {
+          color: white;
+        }
+  
+        /* Style for Font Awesome icons */
+        .social-icons i {
+          font-size: 13px;
+        }
+  
+        .contact-info i {
+          font-size: 16px;
+        }
+  
+        /* Mobile lo hide cheyyadam (max-width: 768px) */
+        @media (max-width: 768px) {
+          .top-bar {
+            display: none;
+          }
+        }
+      </style>
+  
 
 
 
@@ -257,20 +260,7 @@
           </div>
       </div>
 
-      <!-- Slide 2 -->
-      <div class="slide" style="background-image: url('images/bannerssimage/2.png');">
-          <div class="info shades">
-              <h6 class="smallhead">Home Decoration</h6>
-              <h2>Interior design that delivers magic in every moment</h2>
-              <div class="hero-btn-part">
-                  <!-- <a href="about.html" class="hero-btn-part-link">
-                      <button class="hero-btn-part-circle">
-                          <i class="bi bi-arrow-right"></i>
-                      </button> Let's go about us page
-                  </a> -->
-              </div>
-          </div>
-      </div>
+     
 
       <!-- Slide 3 -->
       <div class="slide" style="background-image: url('images/bannerssimage/9.png');">
@@ -481,7 +471,7 @@ p {
 
 <!--about-->
 
-<section style="background-color: rgb(249, 246, 236);">
+<section style="background-color: rgb(241, 231, 205);">
 
  
 
@@ -2287,11 +2277,7 @@ color: white;
       <img src="images/pooja units/3.png" alt="Image 2">
       <img src="images/residence/kitchensss/3.png" alt="Image 3">
     </div>
-    <div class="gallery-image-row" id="row2">
-      <img src="images/tvunits/9.png" alt="Image 4">
-      <img src="images/wordrobes/6.png" alt="Image 5">
-      <img src="images/wordrobes/13.png" alt="Image 6">
-    </div>
+    
     <div class="gallery-image-row" id="row3">
       <img src="images/tvunits/20.png" alt="Image 7">
       <img src="images/residence/kitchensss/14.png" alt="Image 8">
@@ -2302,154 +2288,10 @@ color: white;
       <img src="images/residence/kitchensss/23.png" alt="Image 11">
       <img src="images/pooja units/5.png" alt="Image 12">
     </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/livingrooms/16.png" alt="Image 13">
-      <img src="images/bedrooms/15.png" alt="Image 14">
-      <img src="images/livingrooms/5.png" alt="Image 15">
-    </div>
+   
 
 
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/2.jpg" alt="Image 13">
-      <img src="images/neimgallsr/5.jpg" alt="Image 14">
-      <img src="images/neimgallsr/6.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/7.jpg" alt="Image 13">
-      <img src="images/neimgallsr/8.jpg" alt="Image 14">
-      <img src="images/neimgallsr/9.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/8.jpg" alt="Image 13">
-      <img src="images/neimgallsr/9.jpg" alt="Image 14">
-      <img src="images/neimgallsr/10.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/11.jpg" alt="Image 13">
-      <img src="images/neimgallsr/12.jpg" alt="Image 14">
-      <img src="images/neimgallsr/13.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/14.jpg" alt="Image 13">
-      <img src="images/neimgallsr/15.jpg" alt="Image 14">
-      <img src="images/neimgallsr/16.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/17.jpg" alt="Image 13">
-      <img src="images/neimgallsr/18.jpg" alt="Image 14">
-      <img src="images/neimgallsr/19.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/20.jpg" alt="Image 13">
-      <img src="images/neimgallsr/21.jpg" alt="Image 14">
-      <img src="images/neimgallsr/22.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/23.jpg" alt="Image 13">
-      <img src="images/neimgallsr/24.jpg" alt="Image 14">
-      <img src="images/neimgallsr/25.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/26.jpg" alt="Image 13">
-      <img src="images/neimgallsr/27.jpg" alt="Image 14">
-      <img src="images/neimgallsr/28.jpg" alt="Image 15">
-    </div>
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/29.jpg" alt="Image 13">
-      <img src="images/neimgallsr/30.jpg" alt="Image 14">
-      <img src="images/neimgallsr/31.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/32.jpg" alt="Image 13">
-      <img src="images/neimgallsr/33.jpg" alt="Image 14">
-      <img src="images/neimgallsr/34.jpg" alt="Image 15">
-    </div>
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/35.jpg" alt="Image 13">
-      <img src="images/neimgallsr/36.jpg" alt="Image 14">
-      <img src="images/neimgallsr/37.jpg" alt="Image 15">
-    </div>
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/38.jpg" alt="Image 13">
-      <img src="images/neimgallsr/39.jpg" alt="Image 14">
-      <img src="images/neimgallsr/40.jpg" alt="Image 15">
-    </div>
-
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/41.jpg" alt="Image 13">
-      <img src="images/neimgallsr/42.jpg" alt="Image 14">
-      <img src="images/neimgallsr/43.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/44.jpg" alt="Image 13">
-      <img src="images/neimgallsr/45.jpg" alt="Image 14">
-      <img src="images/neimgallsr/46.jpg" alt="Image 15">
-    </div>
-
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/47.jpg" alt="Image 13">
-      <img src="images/neimgallsr/48.jpg" alt="Image 14">
-      <img src="images/neimgallsr/49.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/50.jpg" alt="Image 13">
-      <img src="images/neimgallsr/51.jpg" alt="Image 14">
-      <img src="images/neimgallsr/52.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/53.jpg" alt="Image 13">
-      <img src="images/neimgallsr/54.jpg" alt="Image 14">
-      <img src="images/neimgallsr/55.jpg" alt="Image 15">
-    </div>
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/56.jpg" alt="Image 13">
-      <img src="images/neimgallsr/57.jpg" alt="Image 14">
-      <img src="images/neimgallsr/58.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/59.jpg" alt="Image 13">
-      <img src="images/neimgallsr/60.jpg" alt="Image 14">
-      <img src="images/neimgallsr/61.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/62.jpg" alt="Image 13">
-      <img src="images/neimgallsr/63.jpg" alt="Image 14">
-      <img src="images/neimgallsr/64.jpg" alt="Image 15">
-    </div>
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/65.jpg" alt="Image 13">
-      <img src="images/neimgallsr/66.jpg" alt="Image 14">
-      <img src="images/neimgallsr/67.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/68.jpg" alt="Image 13">
-      <img src="images/neimgallsr/69.jpg" alt="Image 14">
-      <img src="images/neimgallsr/70.jpg" alt="Image 15">
-    </div>
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/71.jpg" alt="Image 13">
-      <img src="images/neimgallsr/72.jpg" alt="Image 14">
-      <img src="images/neimgallsr/73.jpg" alt="Image 15">
-    </div>
-
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/74.jpg" alt="Image 13">
-      <img src="images/neimgallsr/75.jpg" alt="Image 14">
-      <img src="images/neimgallsr/76.jpg" alt="Image 15">
-    </div>
-    <div class="gallery-image-row" id="row5">
-      <img src="images/neimgallsr/77.jpg" alt="Image 13">
-      <img src="images/neimgallsr/78.jpg" alt="Image 14">
-      <img src="images/neimgallsr/79.jpg" alt="Image 15">
-    </div>
+   
   </div>
 
   <!-- Pagination (Bubbles and Arrows) -->
@@ -2458,21 +2300,9 @@ color: white;
     <span class="gallery-bubble active" data-set="1">1</span>
     <span class="gallery-bubble" data-set="2">2</span>
     <span class="gallery-bubble" data-set="3">3</span>
-    <span class="gallery-bubble" data-set="4">4</span>
-    <span class="gallery-bubble" data-set="5">5</span>
-    <span class="gallery-bubble" data-set="6">6</span>
-    <span class="gallery-bubble" data-set="7">7</span>
-
-    <span class="gallery-bubble" data-set="8">8</span>
-
-    <span class="gallery-bubble" data-set="9">9</span>
-    <span class="gallery-bubble" data-set="10">10</span>
-    <span class="gallery-bubble" data-set="11">11</span>
-    <span class="gallery-bubble" data-set="12">12</span>
-    <span class="gallery-bubble" data-set="13">13</span>
-    <span class="gallery-bubble" data-set="14">14</span>
-    <span class="gallery-bubble" data-set="15">15</span>
-    <span class="gallery-arrow right">&#8250;</span>
+   
+   
+   
   </div>
 </div>
 
