--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="slide active" style="background-image: url('images/bannerssimage/5.png');">
           <div class="info shades">
               <h6 class="smallhead">Home Decoration</h6>
-              <h2>Revamp your space, mesmerize your senses</h2>
+              <h1 class="honetags">best interior design in Nallagandla, Hyderabad</h1>
               <div class="hero-btn-part">
                   <!-- <a href="about.html" class="hero-btn-part-link">
                       <button class="hero-btn-part-circle">
@@ -266,7 +266,7 @@
       <div class="slide" style="background-image: url('images/bannerssimage/9.png');">
           <div class="info shades">
               <h6 class="smallhead">Home Decoration</h6>
-              <h2>Creating Spaces That Inspire</h2>
+              <h2 class="honetags">Creating Spaces That Inspire</h2>
               <div class="hero-btn-part">
                   <!-- <a href="about.html" class="hero-btn-part-link">
                       <button class="hero-btn-part-circle">
