--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       <div class="slide" style="background-image: url('images/bannerssimage/9.png');">
           <div class="info shades">
               <h6 class="smallhead">Home Decoration</h6>
-              <h2 class="honetags">Creating Spaces That Inspire</h2>
+              <h2 class="honetags text-white">Creating Spaces That Inspire</h2>
               <div class="hero-btn-part">
                   <!-- <a href="about.html" class="hero-btn-part-link">
                       <button class="hero-btn-part-circle">
@@ -292,7 +292,7 @@
     <div class="col-xl-5 col-lg-5 col-md-12 col-sm-12">
       <div class="about-img-part side-img-part">
         <div class="">
-          <img src="images/kitchen-furniture-illustration.png" class="about-img-box-main-img" data-aos="fade-right" data-aos-duration="1000" alt="Kitchen Image">
+          <img src="images/lightings.png" class="about-img-box-main-img" data-aos="fade-right" data-aos-duration="1000" alt="Kitchen Image">
           <div class="about-section-card"></div>
         </div>
       </div>
