--- a/renovation-services.html
+++ b/renovation-services.html
@@ -160,8 +160,8 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item " href="residential-services.html">Residential</a>
-                <a class="dropdown-item active" href="commercial-services.html">Commercial</a>
-                <a class="dropdown-item" href="renovation-services.html">Renovation</a>
+                <a class="dropdown-item " href="commercial-services.html">Commercial</a>
+                <a class="dropdown-item active" href="renovation-services.html">Renovation</a>
               </div>
             </li>
     
@@ -191,7 +191,7 @@
       <section class="breadcrumb-section">
         <img src="images/bannerssimage/9.png" class="breadcrumb-section-img" />
         <div class="bread-txt">
-          <h1>Commercial Services</h1>
+          <h1>Renovation Services</h1>
         </div>
        
       </section>
