--- a/renovation-services.html
+++ b/renovation-services.html
@@ -390,6 +390,9 @@
 
 
 
+
+
+
         <!-- Flooring Image Gallery -->
         <h3 class="text-center main-heading">Pooja kit</h3>
         <div class="image-gallery">
@@ -407,6 +410,37 @@
             </div>
             <button class="nextButton nav-button">▶</button>
         </div>
+
+
+
+         <!-- Lighting Image Gallery -->
+         <h3 class="text-center main-heading">Ceiling</h3>
+         <div class="image-gallery">
+             <button class="prevButton nav-button">◀</button>
+             <div class="image-container">
+                 <div class="images-wrapper">
+                   <img src="assets/images/wardrobe/1.png" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/wardrobe/2.png" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/wardrobe/3.png" alt="Image 7" class="gallery-image">
+                   <img src="assets/images/wardrobe/4.png" alt="Image 8" class="gallery-image">
+                   <img src="assets/images/wardrobe/5.png" alt="Image 8" class="gallery-image">
+                   <img src="assets/images/wardrobe/6.png" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/wardrobe/7.png" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/wardrobe/8.png" alt="Image 7" class="gallery-image">
+                   <img src="assets/images/wardrobe/9.png" alt="Image 7" class="gallery-image">
+                   <img src="assets/images/wardrobe/10.png" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/wardrobe/11.png" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/wardrobe/12.png" alt="Image 7" class="gallery-image">
+                   <img src="assets/images/wardrobe/13.png" alt="Image 8" class="gallery-image">
+                   <img src="assets/images/wardrobe/14.png" alt="Image 8" class="gallery-image">
+                   <img src="assets/images/wardrobe/15.png" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/wardrobe/16.png" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/wardrobe/17.png" alt="Image 7" class="gallery-image">
+              
+                 </div>
+             </div>
+             <button class="nextButton nav-button">▶</button>
+         </div>
 
           <!-- Flooring Image Gallery -->
           <h3 class="text-center main-heading">Lighting</h3>
