--- a/renovation-services.html
+++ b/renovation-services.html
@@ -419,23 +419,24 @@
              <button class="prevButton nav-button">◀</button>
              <div class="image-container">
                  <div class="images-wrapper">
-                   <img src="assets/images/wardrobe/1.png" alt="Image 5" class="gallery-image">
-                   <img src="assets/images/wardrobe/2.png" alt="Image 6" class="gallery-image">
-                   <img src="assets/images/wardrobe/3.png" alt="Image 7" class="gallery-image">
-                   <img src="assets/images/wardrobe/4.png" alt="Image 8" class="gallery-image">
-                   <img src="assets/images/wardrobe/5.png" alt="Image 8" class="gallery-image">
-                   <img src="assets/images/wardrobe/6.png" alt="Image 5" class="gallery-image">
-                   <img src="assets/images/wardrobe/7.png" alt="Image 6" class="gallery-image">
-                   <img src="assets/images/wardrobe/8.png" alt="Image 7" class="gallery-image">
-                   <img src="assets/images/wardrobe/9.png" alt="Image 7" class="gallery-image">
-                   <img src="assets/images/wardrobe/10.png" alt="Image 5" class="gallery-image">
-                   <img src="assets/images/wardrobe/11.png" alt="Image 6" class="gallery-image">
-                   <img src="assets/images/wardrobe/12.png" alt="Image 7" class="gallery-image">
-                   <img src="assets/images/wardrobe/13.png" alt="Image 8" class="gallery-image">
-                   <img src="assets/images/wardrobe/14.png" alt="Image 8" class="gallery-image">
-                   <img src="assets/images/wardrobe/15.png" alt="Image 5" class="gallery-image">
-                   <img src="assets/images/wardrobe/16.png" alt="Image 6" class="gallery-image">
-                   <img src="assets/images/wardrobe/17.png" alt="Image 7" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/1.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/2.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/3.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/4.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/5.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/6.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/7.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/8.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/9.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/10.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/11.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/12.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/13.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/14.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/15.jpg" alt="Image 5" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/16.jpg" alt="Image 6" class="gallery-image">
+                   <img src="assets/images/ceilingrooms/17.jpg" alt="Image 5" class="gallery-image">
+                   
               
                  </div>
              </div>
